# widgets

./: .bandit  LICENSE  README.md  app.py  generate_openapi.py  main.py  models.py  pyproject.toml  schemas.py  services.py  widgets.db
src/widgets/: __init__.py  main.py  models.py  schemas.py  services.py
tests/: __init__.py  test_main.py  test_services.py
