[tool.poetry]
name = "widgets"
version = "0.1.0"
description = "A CRUD REST API for managing Widgets"
authors = ["Jason Robison"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
