[tool.poetry]
name = "widgets"
version = "0.1.0"
description = "A CRUD REST API for managing Widgets"
authors = ["Jason Robison"]
license = "MIT"
readme = "README.md"
packages = [{ include = "widgets", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.41"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
